package ch.uzh.ifi.hase.soprafs22.screwyourneighborserver.entity;

public interface CardDeck {

  public Card drawCard();

  void shuffle();
}
