package ch.uzh.ifi.hase.soprafs22.screwyourneighborserver.entity;

public enum CardRank {
  SIX,
  SEVEN,
  EIGHT,
  NINE,
  TEN,
  JACK,
  QUEEN,
  KING,
  ACE;
}
