package ch.uzh.ifi.hase.soprafs22.screwyourneighborserver.entity;

public enum CardSuit {
  CLUB,
  DIAMOND,
  HEART,
  SPADE
}
