package ch.uzh.ifi.hase.soprafs22.screwyourneighborserver.entity;

public enum GameState {
  FINDING_PLAYERS,
  PLAYING,
  CLOSED
}
