package ch.uzh.ifi.hase.soprafs22.screwyourneighborserver.entity;

public enum MatchState {
  ANNOUNCING,
  PLAYING,
  FINISH,
}
