@startuml
class Player {
    - long id
    - String name
    - String sessionId
}

class User {
    - long id
    - String username
    - String passwordHash
}

enum GameState {
    FINDING_PLAYERS,
    PLAYING,
    CLOSED
}

class Game {
    - long id
    - GameState state
    - String name
    + List<Match> getSortedMatches()
    + Optional<Match> getLastMatch()
}

class Participation {
    - long id
    - boolean active
    - Integer playerOrder
}

class Match {
    - long id
    - int matchNumber
    - MatchState matchstate
    + List<Hands> getSortedHands()
    + List<Round> getSortedRounds()
    + boolean allScoresAnnounced()
    + Optional<Round> getLastRound()
}

enum MatchState {
    ANNOUNCING_TRICKS,
    PLAYING_CARDS,
    FINISHED
}

class Hand {
    - int announcedScore
    + boolean isTurnActive()
}


class Round {
    - long id
    - int roundNumber
    + Collection<Long> getTrickWinnerIds()
}

class Card {
    - CardSuit cardSuit
    - CardRank cardRank
    + int compareTo(Card c)
    + boolean isGreaterThan(Card c)
    + boolean isEqualTo(Card c)
}

enum CardSuit {
    CLUB,
    DIAMOND,
    HEART,
    SPADE
}

enum CardRank {
  ACE,
  SIX,
  SEVEN,
  EIGHT,
  NINE,
  TEN,
  JACK,
  QUEEN,
  KING
}

interface CardDeck {
    + Card drawCard()
}

class StandardCardDeck {
    + void shuffle()
}

Player "*" -- "1" User
Player "1" -- "*" Participation

Participation "*" -- "1" Game
Participation "1" -- "*" Hand

Hand "*" -- "1" Match
Hand "1" -- "1..5" Card

Game "1" -- "1..9" Match

Match "1" -- "1..5" Round

Round "1" -- "1..7" Card

CardDeck <|-- StandardCardDeck

StandardCardDeck "1" -- "*" Card

@enduml
